# json_by_tcp

./: .gitignore  CMakeLists.txt
clientDataSender/: clientDataSender.pro
serverDataReceiver/: serverDataReceiver.pro
src/client_data_sender/: CMakeLists.txt  main.cpp  tcpsmartclient.cpp  tcpsmartclient.h
src/client_data_sender/gui/: netsettingsdialog.cpp  netsettingsdialog.h  widget.cpp  widget.h
src/server_data_receiver/: CMakeLists.txt  averagetime.cpp  averagetime.h  headerdescription.h  headerdescription_impl.h  main.cpp  parsersmanager.h  parsersmanager_impl.h  tcpserver.cpp  tcpserver.h  widget.cpp  widget.h
src/server_data_receiver/all_struct_parser/: abstractp.h  datahandler.h  datahandler_imlp.h  structparserlight.h  structparserlight_impl.h
src/server_data_receiver/parsers/: abstractparser.h  abstractparser_impl.h  abstractparsersignalsslots.h  jsonparser.h  jsonparser_impl.h  structparser.h  structparser_impl.h
src/shared/structs/: dataheader.h  somestruct.h  struct001.h
